--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             />
           </figure>
           <div class="profile-info">
-            <h1 data-testid="test-user-name" class="user-name">Mapelujo Abdulkareem</h1>
+            <h1 data-testid="test-user-name" class="user-name">
+              Mapelujo Abdulkareem
+            </h1>
             <p data-testid="test-user-bio" class="user-bio">
               I build speed-focused interfaces and applications that retain
               users with Next.js and TypeScript. I create scalable solutions
@@ -53,8 +55,12 @@
                 class="social-link twitter"
                 aria-label="Follow Lansa on X"
               >
-                <span class="social-icon">🐦</span>
-                Twitter
+                <img
+                  src="/images/x-logo.svg"
+                  alt="X Logo"
+                  class="social-icon-svg"
+                />
+                X (Twitter)
               </a>
             </li>
             <li>
@@ -66,7 +72,11 @@
                 class="social-link linkedin"
                 aria-label="Connect with Mapelujo Abdulkareem on LinkedIn"
               >
-                <span class="social-icon">💼</span>
+                <img
+                  src="/images/linkedin-logo.svg"
+                  alt="LinkedIn Logo"
+                  class="social-icon-svg"
+                />
                 LinkedIn
               </a>
             </li>
@@ -79,7 +89,11 @@
                 class="social-link github"
                 aria-label="View Lansa's projects on GitHub"
               >
-                <span class="social-icon">💻</span>
+                <img
+                  src="/images/github-logo.svg"
+                  alt="GitHub Logo"
+                  class="social-icon-svg"
+                />
                 GitHub
               </a>
             </li>
