--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   </head>
   <body>
     <main>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="about.html" class="nav-link">About Me</a></li>
+          <li><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
+      </nav>
       <article class="profile-card" data-testid="test-profile-card">
         <header class="profile-header">
           <figure class="profile-avatar">
